tests/custom-3.2.9/compliant/node.yaml
apiVersion: v1
kind: Node
metadata:
  name: compliant-node
  annotations:
    kubelet.config.RotateKubeletServerCertificate: "true"
