tests/custom-3.2.9/compliant/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: custom-3.2.9-compliant
policies:
  - ../../../kyverno-policies/custom-3.2.9.yaml
resources:
  - node.yaml
results:
  - policy: custom-3-2-9-rotate-kubelet-server-certificate
    rule: check-rotate-kubelet-server-certificate
    resources:
      - compliant-node
    kind: Node
    result: pass
